--- a/06-community_metrics.Rmd
+++ b/06-community_metrics.Rmd
@@ -295,6 +295,45 @@ Which suggests the same pattern!
 **Advanced:** Compare the species accumulate curves at the site level for small (<10 kg) and large mammals (>10kg)
 
 
+```{r}
+# Create a new empty list
+inc_time <- list()
+
+# The treatment types for each Deployment.Location.ID are in the sta file
+# Make an object containing all of the site ID's for the "Offline" cameras
+off <- locs$placename[locs$feature_type=="Offline"]
+# And "HumanUse" cameras
+hum <- locs$placename[locs$feature_type=="HumanUse"]
+
+regen <- locs$placename[locs$feature_type=="NatRegen"]
+
+# Only sum the data for each relevent strata
+inc_time[[1]] <- c(nrow(inc_dat[inc_dat$placename %in% off,]),  # Count the number of weeks we have data for in each strata
+                     # Then subset the detections to those stations, sum the columns, and sort the incidents
+                     inc_dat[inc_dat$placename %in% off, sp_summary$sp] %>%  colSums() %>% sort(decreasing=T))
+
+inc_time[[2]] <- c(nrow(inc_dat[inc_dat$placename %in% hum,]),  # Count the number of stations
+                     # Then subset the detections to those stations, sum the columns, and sort the incidents
+                     inc_dat[inc_dat$placename %in% hum, sp_summary$sp] %>%  colSums() %>% sort(decreasing=T))
+
+inc_time[[3]] <- c(nrow(inc_dat[inc_dat$placename %in% regen,]),  # Count the number of stations
+                     # Then subset the detections to those stations, sum the columns, and sort the incidents
+                     inc_dat[inc_dat$placename %in% regen, sp_summary$sp] %>%  colSums() %>% sort(decreasing=T))
+
+
+# Give them names
+names(inc_time) <- c("Offline", "HumanUse", "NatRegen")
+```
+
+```{r ch6_21b, class.source="Rmain"}
+out.inc <- iNEXT(inc_time, q=0, datatype="incidence_freq")
+# Sample‐size‐based R/E curves
+ggiNEXT(out.inc, type=1, color.var="Assemblage") +
+       labs(y="Richness", x = "Camera days") +
+theme_classic() 
+```
+
+
 ## Other diversity metrics
 
 ### Simpson and Shannon
@@ -325,8 +364,9 @@ out <- iNEXT(inc_time, q=c(0,1,2) ,datatype="incidence_freq", size=c(1000))
 point_estimate <- out$iNextEst$size_based[out$iNextEst$size_based$t==1000,] 
 point_estimate
 # Make a nice ggplot!
-ggplot(point_estimate, aes(x=c(-0.1,0.9, 1.9,
-                                0.1, 1.1, 2.1), y=qD, colour=Assemblage)) + 
+ggplot(point_estimate, aes(x=c(-0.2,0.8, 1.8,
+                               0,1,2,
+                                0.2, 1.2, 2.2), y=qD, colour=Assemblage)) + 
        theme_classic() +
        #scale_x_discrete(breaks=c("1","2"),labels= c("1","2")) +
        geom_errorbar(aes(ymin=qD.LCL, ymax=qD.UCL), width=.01) +
@@ -382,9 +422,6 @@ locs <-  read.csv("data/processed_data/AlgarRestorationProject_camera_locations_
 
 # Add the covariates to your total_obs dataframe
 dat <- left_join(total_obs, locs)
-
-# To keep things simple, we will subset to HumanUse and Offline (as above)
-dat <- dat[dat$feature_type %in% c("HumanUse", "Offline"),]
 
 # Convert to categorical factors
 dat <- dat %>% 
@@ -462,7 +499,7 @@ The NMDS framework is flexible - we can also add environmental covariates using 
 
 ### On your own
 
-Repeat the comparison for `NetReg` and `HumanUse` feature types.
+Repeat the comparison for `NetRegen` and `HumanUse` feature types.
 
 
 ### Examples in the literature
